[package]
name = "aes_mac_integration"
version = "0.1.0"
edition = "2024"

[dependencies]
aes_toy = { path = "../aes_toy" }
mac_toy = { path = "../mac_toy" }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hkdf = "0.12"
sha2 = "0.10"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
